# pardus-nvidia-installer

./: .gitignore  README.md  meson.build  meson_options.txt  nvidia-drivers.gpg  nvidia-drivers.list  nvidia.pub  pni-disable-gpu.service  pni-disable-gpu.sh  tr.org.pardus.pardus-nvidia-installer.desktop  tr.org.pardus.pkexec.pardus-nvidia-installer.policy  update_translations.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: 340.json  390.json  470.json  current.json  nvidia-pci.json  nvidia-pci.yaml  test.py
data/po/: LINGUAS  POTFILES  files  pardus-nvidia-installer.pot  pt.po  tr.po
debian/: changelog  control  debhelper-build-stamp  files  postinst  postrm  prerm  rules
debian/pardus-nvidia-installer/DEBIAN/: control  md5sums
debian/pardus-nvidia-installer/usr/share/doc/pardus-nvidia-installer/: copyright
debian/pardus-nvidia-installer/usr/share/pardus/pardus-nvidia-installer/: pardus-nvidia-installer
debian/pardus-nvidia-installer/usr/share/pardus/pardus-nvidia-installer/src/: Main.py  MainWindow.py  nvidia.py  package.py
debian/pardus-nvidia-installer/usr/share/polkit-1/actions/: tr.org.pardus.pkexec.pardus-nvidia-installer.policy
debian/pardus-nvidia-installer/var/lib/polkit-1/localauthority/50-local.d/: pardus-nvidia-installer-group.pkla
src/: .MainWindow.py.swp  Main.py  MainWindow.py  functions.py  functions_test.py  functions_test2.py  nvidia.py  package.py  package_progress.py  process_std.py  progress.py  states.py  std_opr.py
ui/: #ui.glade#  driver_toggle.glade  driver_toggle.glade~  ui.glade  ui.glade~
